se agrego seccion menciones

--- a/index.html
+++ b/index.html
@@ -75,6 +75,39 @@
             </article>
         </div>
     </section>
+    <section class="menciones">
+        <h2 class="menciones__titulo">menciones</h2>
+        <div class="menciones__contenedor">
+            <article class="card-menciones">
+                <figure class="card-menciones__figure">
+                    <img class="card-menciones__img" src="imagenes/p1.png" alt="foto perfil mario">
+                </figure>
+                <h2 class="card-menciones__nombre espacio">mario</h2>
+                <p class="card-menciones__parrafo espacio">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </article>
+            <article class="card-menciones">
+                <figure class="card-menciones__figure">
+                    <img class="card-menciones__img" src="imagenes/p2.png" alt="foto perfil mario">
+                </figure>
+                <h2 class="card-menciones__nombre espacio">maria</h2>
+                <p class="card-menciones__parrafo espacio">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </article>
+            <article class="card-menciones">
+                <figure class="card-menciones__figure">
+                    <img class="card-menciones__img" src="imagenes/p3.png" alt="foto perfil mario">
+                </figure>
+                <h2 class="card-menciones__nombre espacio">joe</h2>
+                <p class="card-menciones__parrafo espacio">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </article>
+            <article class="card-menciones">
+                <figure class="card-menciones__figure">
+                    <img class="card-menciones__img" src="imagenes/p4.png" alt="foto perfil mario">
+                </figure>
+                <h2 class="card-menciones__nombre espacio">jamaica</h2>
+                <p class="card-menciones__parrafo espacio">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </article>
+        </div>
+    </section>
 
 </body>
 
