nuevo codigo de analitics

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="css/estilos.css">
     <title>cajitas</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HTETD9H9TG"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207520818-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-HTETD9H9TG');
+        gtag('config', 'UA-207520818-1');
     </script>
+
 </head>
 
 <body>
