--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
                         <img class="card__img" src="imagenes/box2.png" alt="">
                     </figure>
                     <h2 class="card__titulo">producto 1</h2>
+                    <iframe 
+    src="https://be0t6dsg.chat.qbusiness.us-east-1.on.aws/" 
+    width="100%" 
+    height="600" 
+    frameborder="0" 
+    allowfullscreen 
+    title="Amazon Q Business Chat">
+</iframe>
+
                     <p class="card__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt nemo
                         veniam et!</p>
                     <button class="card__botom">lo quiero</button>
